# wwwc

./: AGENTS.md  README.md  TODO.md  pyproject.toml  pyrightconfig.json  research_plan.md  review.md
artifacts/: env_snapshot.json
artifacts/calibration_cpu/: accounting.json  summary.json
configs/: calibration_cpu.yaml  gpu_handoff.yaml  simulation_cpu.yaml
data/samples/: longbench_v2_mini.jsonl  ruler_mini.jsonl
docs/: BRINGUP_LOG.md  GPU_HANDOFF.md  POSTMORTEM.md
manifests/: experiment_registry.yaml  longbench_v2_selection.yaml  ruler_mixed_slices.yaml
review/: main.md
scripts/: go_nogo.py  load_gemma.py  lora_diagnostic.py  lora_write_test.py  lora_write_test_v2.py  lora_write_test_v3.py
src/tristore_bma/: __init__.py  allocator.py  budgeting.py  cache.py  chunking.py  cli.py  config.py  datasets.py  gemma_runner.py  logging_utils.py  manifests.py  matrix.py  pipeline.py  preselector.py  prompting.py  reporting.py  repro.py  scaffold.py  simulation.py  validation.py
tests/: test_allocator.py  test_budgeting.py  test_chunking.py  test_config.py  test_cross_validation.py  test_datasets.py  test_matrix.py  test_pipeline.py  test_prompting.py  test_reporting.py  test_repro.py  test_runner.py  test_validation.py
